--- a/Handson_1_Template.ipynb
+++ b/Handson_1_Template.ipynb
@@ -39,7 +39,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CODE HERE ###"
+    "firstName = input(\"First Name: \")\n",
+    "lastName = input(\"Last Name: \")\n",
+    "birthYear = input(\"Birth Year: \")\n",
+    "tempPassword = firstName + '*' + birthYear\n",
+    "print(\"Welcome\", firstName, lastName + \"!\")\n",
+    "print(\"Your registration is complete!\")\n",
+    "print(\"Your temporary password is:\", tempPassword)"
    ]
   },
   {
@@ -81,7 +87,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CODE HERE ###"
+    "hoursWorked = float(input(\"Hours Worked: \"))\n",
+    "hourlyPayRate = float(input(\"Hourly Pay Rate: \"))\n",
+    "taxRate = 18\n",
+    "grossPay = round(hoursWorked * hourlyPayRate, 2)\n",
+    "taxAmount = round(grossPay * (taxRate / 100), 2)\n",
+    "takeHomePay = round(grossPay - taxAmount, 2)\n",
+    "print(\"Gross Pay:\", grossPay)\n",
+    "print(\"Tax Rate:\", taxRate, \"%\")\n",
+    "print(\"Tax Amount:\", taxAmount)\n",
+    "print(\"Take Home Pay:\", takeHomePay)"
    ]
   },
   {
@@ -117,13 +132,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CODE HERE ###"
+    "miles = int(input(\"Enter Miles: \"))\n",
+    "milesPerHour = int(input(\"Enter Miles per Hour: \"))\n",
+    "hours = miles // milesPerHour\n",
+    "minutes = (miles / milesPerHour * 60) % 60\n",
+    "print(\"Estimated Travel Time\")\n",
+    "print(\"Hours:\", hours)\n",
+    "print(\"Minutes:\", round(minutes))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.12.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +158,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
